# dfactory

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: pylint.yml  release.yml
data_flow_handle_framework/framework/: converters.py  handlerbase.py  seeders.py  updaters.py  writers.py
dfactory/core/: __init__.py  base.py  pipeline.py  utils.py
dfactory/framework/: __init__.py  common.py  converters.py  handlerbase.py  keymatcher.py  logichandlers.py  matches.py  pipeline.py  seeders.py  updaters.py  writers.py
dfactory/handlers/: converters.py  filters.py  keymatcher.py  logichandlers.py  matches.py  updaters.py
dfactory/output/: __init__.py  csvwriter.py  writers.py
dfactory/seeders/: __init__.py  csvseeder.py  jsonseeder.py  seeders.py
dfactory/strings/: __init__.py  cutter.py  formatter.py
dfactory/utils/: json.py  jsonutils.py
dfactory/writers/: __init__.py  csvwriter.py  jsonwriter.py
